--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ List:<br>
     <tr>
       <td style="vertical-align: top;">Microsoft<br>
       </td>
-      <td style="vertical-align: top;"><a href="/Sites/Microsoft/2004">2004</a><br>
+      <td style="vertical-align: top;"><a href="/Sites/Microsoft/2004">2004</a>; 2005; 2006; 2007<br>
       </td>
     </tr>
     <tr>
