--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html><head>
+
 <meta content="text/html; charset=ISO-8859-2" http-equiv="content-type"><title>Oldweb</title></head><body>
 <div style="text-align: center; font-family: Segoe UI;"><big><big><big>Oldweb: The open-source web project<br>
 <br>
@@ -18,7 +19,7 @@ List:<br>
     <tr>
       <td style="vertical-align: top;">Microsoft<br>
       </td>
-      <td style="vertical-align: top;"><a href="/Sites/Microsoft/2004">2004</a>; <a href="/Sites/Microsoft/2005">2005</a>; <a href="/Sites/Microsoft/2006">2006</a>; 2007<br>
+      <td style="vertical-align: top;"><a href="/Sites/Microsoft/2004">2004</a>; <a href="/Sites/Microsoft/2005">2005</a>; <a href="/Sites/Microsoft/2006">2006</a>; <a href="/Sites/Microsoft/2007">2007</a><br>
       </td>
     </tr>
     <tr>
