Index.html Update

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@ List:<br>
     <tr>
       <td style="vertical-align: top;">Microsoft<br>
       </td>
-      <td style="vertical-align: top;"><a href="/Sites/Microsoft/2004">2004</a>; <a href="/Sites/Microsoft/2005">2005</a>; <a href="/Sites/Microsoft/2006">2006</a>; <a href="/Sites/Microsoft/2007">2007</a>; <a href="/Sites/Microsoft/2008">2008</a><br>
+      <td style="vertical-align: top;"><a href="/Sites/Microsoft/2004">2004</a>; <a href="/Sites/Microsoft/2005">2005</a>; <a href="/Sites/Microsoft/2006">2006</a>; <a href="/Sites/Microsoft/2007">2007</a>; <a href="/Sites/Microsoft/2008">2008</a>; 2010; 2011; 2012; 2013; 2014; 2015;<br>
+2016; 2017;<br>
       </td>
     </tr>
     <tr>
@@ -35,7 +36,7 @@ List:<br>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">AWS<br>
+      <td style="vertical-align: top;">Amazon Web Services<br>
       </td>
       <td style="vertical-align: top;"><br>
       </td>
